# gitit-mailserver

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  run.sh  test.json  test.rst
