[package]
name = "gitit-mailserver"
version = "1.0.0"
authors = ["Marco Gazzin <gazzin.marco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = "*"
serde_json = "*"
serde_derive = "*"
imap = "*"
native-tls = "*"
mailparse="*"
csv="1.1"
env_logger="*"
log="*"
